--- a/scss/sin-core/grid/_spacing-beta.scss
+++ b/scss/sin-core/grid/_spacing-beta.scss
@@ -4,32 +4,8 @@
 @use '../../../../../sin.config' as *;
 @use './../functions' as *;
 @use '../misc/css-properties' as *;
+@use '../mixins/private/' as *;
 @use '../grid/responsive' as *;
-
-@function css-property($check: false, $css-value: null) {
-  @if $check {
-    @return $css-value;
-  } @else {
-    @return null;
-  }
-}
-
-@mixin css-property-line($property: $property, $current-direction: $current-direction, $value: $value, $is-important: $is-important, $debug: false) {
-  @if $debug {
-    @debug '@mixin css-property-line-with-scale calculating rule';
-    @debug unquote('Property: #{$property}');
-    @debug unquote('Current Direction: #{$current-direction}');
-    @debug unquote('Value: #{$value}');
-    @debug unquote('Is Important: #{$is-important}');
-  }
-
-  // Handle Gap exception
-  @if $property == 'g' {
-    #{$current-direction}: #{$value} #{css-property($is-important, '!important')};
-  } @else {
-    #{getMap(getMap($css-properties, spacing, spacing-properties), $property)}-#{$current-direction}: #{$value} #{css-property($is-important, '!important')};
-  }
-}
 
 @mixin css-property-line-with-scale($property: $property, $current-direction: $current-direction, $value: $value, $is-important: $is-important, $scale: $scale, $debug: false) {
   @if $debug {
